# ebook-reader

./: .gitignore  CLAUDE.md  README.md  app.py  dev.sh  index.html  pyproject.toml  requirements.txt  run.sh
backend/: book.py  server.py  tts.py
docs/plans/: 2026-03-05-vite-svelte-ui-design.md  2026-03-05-vite-svelte-ui-plan.md  2026-03-17-client-side-tts-design.md  2026-03-17-client-side-tts-plan.md  2026-03-17-landing-page-design.md
docs/superpowers/specs/: 2026-03-18-smart-buffering-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/components/: AudioPlayer.svelte  Reader.svelte  Sidebar.svelte
frontend/src/lib/: api.ts  book.ts  storage.ts  stores.ts  tts.ts  ttsWorker.ts
src/: App.svelte
src/components/: AudioPlayer.svelte  LandingPage.svelte  PdfPageView.svelte  Reader.svelte  Sidebar.svelte
src/lib/: book.ts  storage.ts  stores.ts  timeStretch.ts  tts.ts  ttsWorker.ts
